--- a/1.html
+++ b/1.html
@@ -6,11 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        span {
+            background-color: #000;
+        }
+
+        span::after {
+            content: " ";
+            display: block;
+            width: 30px;
+            height: 30px;
+            background-color: pink;
+        }
+    </style>
 </head>
 
 <body>
     <div class="dian">点击</div>
     <div class="dian">点击</div>
+    <span>11</span>
+    <input type="text">
+    <!-- <span>22</span>
+    <span>33</span> -->
     <script>
 
         // class Father {
@@ -35,14 +52,14 @@
         // // console.log(son1);
         // var arr = [1, 2, 3, 5];
         // arr.max();
-        var dian = document.querySelectorAll('.dian');
-        for (let i = 0; i < 10; i++) {
-            if (i < 2) {
-                dian[i].onclick = function () {
-                    console.log(i);
-                }
-            }
-        }
+        // var dian = document.querySelectorAll('.dian');
+        // for (let i = 0; i < 10; i++) {
+        //     if (i < 2) {
+        //         dian[i].onclick = function () {
+        //             console.log(i);
+        //         }
+        //     }
+        // }
     </script>
 </body>
 
